--- a/package.json
+++ b/package.json
@@ -3,14 +3,11 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://hgroves22.github.io/portfolioWebsite",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "main -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@formspree/react": "^2.5.1",
